--- a/packages/use-next-navigation-event/package.json
+++ b/packages/use-next-navigation-event/package.json
@@ -2,21 +2,28 @@
   "name": "use-next-navigation-event",
   "version": "0.0.0",
   "description": "",
-  "main": "./index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsup src/index.ts --format cjs --dts",
+    "dev": "pnpm run build --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Jacopo Marrone <@tresorama> <jacopo.marrone27@gmail.com> (https://github.com/tresorama)",
   "license": "MIT",
   "peerDependencies": {
+    "next": ">=13.0.0",
     "react": ">=18.2.0",
-    "react-dom": ">=18.2.0",
-    "next": ">=13.0.0"
+    "react-dom": ">=18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0",
     "@types/react-dom": "^18.0.7",
-    "next": ">=13.0.0"
+    "next": ">=13.0.0",
+    "tsup": "^6.5.0",
+    "tsconfig": "workspace:*"
   }
 }
