--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@changesets/cli": "^2.26.0"
+  },
   "packageManager": "pnpm@7.25.0"
 }
