--- a/packages/use-next-navigation-event/package.json
+++ b/packages/use-next-navigation-event/package.json
@@ -1,7 +1,7 @@
 {
   "name": "use-next-navigation-event",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Do something on Next.js router navigation events.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -9,7 +9,12 @@
     "dev": "pnpm run build --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "next",
+    "events",
+    "react",
+    "next/router"
+  ],
   "author": "Jacopo Marrone <@tresorama> <jacopo.marrone27@gmail.com> (https://github.com/tresorama)",
   "license": "MIT",
   "peerDependencies": {
